--- a/index.html
+++ b/index.html
@@ -155,9 +155,8 @@
 </head>
 <body>
     <header class="hero">
-        <h1>Priscilla Nzula</h1>
-        <h2>Data Scientist | Data Analyst</h2>
-        <p>A Data Scientist and Analyst with a passion for uncovering insights, I specialize in transforming complex datasets into actionable strategies that drive measurable business impact. Leveraging advanced machine learning, statistical analysis, and exploratory data techniques, I’ve developed predictive models achieving over 85% accuracy in real estate valuation and 90% in customer churn prediction. As a data analyst, I’ve also identified key trends, segmented customer behaviors, and created interactive dashboards for real-time decision support, helping optimize revenue streams and reduce costs. By bridging data science with business intelligence, I deliver scalable, data-driven solutions that enhance customer retention, streamline operations, and empower data-informed decision-making.</p>
+        <h1>Priscilla Nzula|Data Scientist</h1>
+        <p>A Data Scientist with a passion for uncovering insights, I specialize in transforming complex datasets into actionable strategies that drive measurable business impact. Leveraging advanced machine learning, statistical analysis, and exploratory data techniques, I’ve developed predictive models achieving over 85% accuracy in real estate valuation and 90% in customer churn prediction. As a data analyst, I’ve also identified key trends, segmented customer behaviors, and created interactive dashboards for real-time decision support, helping optimize revenue streams and reduce costs. By bridging data science with business intelligence, I deliver scalable, data-driven solutions that enhance customer retention, streamline operations, and empower data-informed decision-making.</p>
     </header>
 
     <section class="projects">
