--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
 <body>
     <header class="hero">
         <h1>Priscilla Nzula|Data Scientist</h1>
+        
         <p>A Data Scientist with a passion for uncovering insights, I specialize in transforming complex datasets into actionable strategies that drive measurable business impact. Leveraging advanced machine learning, statistical analysis, and exploratory data techniques, I’ve developed predictive models achieving over 85% accuracy in real estate valuation and 90% in customer churn prediction. As a data analyst, I’ve also identified key trends, segmented customer behaviors, and created interactive dashboards for real-time decision support, helping optimize revenue streams and reduce costs. By bridging data science with business intelligence, I deliver scalable, data-driven solutions that enhance customer retention, streamline operations, and empower data-informed decision-making.</p>
     </header>
 
@@ -212,7 +213,8 @@
                 <li>Developed sales forecasting models (ARIMA) for inventory management.</li>
                 <li>Detected anomalies impacting business performance.</li>
             </ul>
-            <a href="#">Read Full Analysis →</a>
+           
+            <a href=" https://github.com/priscillanzula/Case_study-.git">View Full Analysis →</a>
         </div>
     </section>
 
