--- a/index.html
+++ b/index.html
@@ -1,184 +1,97 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Priscilla Nzula - Portfolio</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
+Skip to content
+Navigation Menu
+priscillanzula
+priscilla_nzula.github.io
 
-        body {
-            line-height: 1.6;
-            color: #333;
-        }
+Type / to search
+Code
+Issues
+Pull requests
+Actions
+Projects
+Wiki
+Security
+Insights
+Settings
+Files
+Go to file
+t
+LICENSE.txt
+README.md
+README.txt
+elements.html
+generic.html
+index.html
+priscilla_nzula.github.io
+/
+index.html
+in
+nzula_p
 
-        .hero {
-            background: linear-gradient(to right, #007bff, #0056b3);
-            color: white;
-            padding: 4rem 2rem;
-            text-align: center;
-        }
+Edit
 
-        .hero h1 {
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
-        }
+Preview
+Indent mode
 
-        .hero h2 {
-            font-size: 1.8rem;
-            margin-bottom: 1rem;
-            font-weight: 400;
-        }
+Spaces
+Indent size
 
-        .hero p {
-            max-width: 800px;
-            margin: 0 auto;
-            font-size: 1.1rem;
-        }
+4
+Line wrap mode
 
-        .projects {
-            padding: 4rem 2rem;
-        }
-
-        .projects h2 {
-            text-align: center;
-            margin-bottom: 2rem;
-            color: #007bff;
-        }
-
-        .project-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        .project-card {
-            border: 1px solid #eee;
-            border-radius: 8px;
-            padding: 1.5rem;
-            background: white;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            transition: transform 0.3s ease;
-        }
-
-        .project-card:hover {
-            transform: translateY(-5px);
-        }
-
-        .project-card h3 {
-            color: #007bff;
-            margin-bottom: 1rem;
-        }
-
-        .project-card ul {
-            margin: 1rem 0;
-            padding-left: 1.5rem;
-        }
-
-        .project-card a {
-            color: #007bff;
-            text-decoration: none;
-            display: inline-block;
-            margin-top: 1rem;
-            font-weight: 500;
-        }
-
-        .project-card a:hover {
-            text-decoration: underline;
-        }
-
-        .business-analysis {
-            background: #f9f9f9;
-            padding: 4rem 2rem;
-        }
-
-        .business-analysis .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background: white;
-            padding: 2rem;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-
-        .business-analysis h2 {
-            text-align: center;
-            color: #007bff;
-            margin-bottom: 2rem;
-        }
-
-        footer {
-            background: #333;
-            color: white;
-            padding: 4rem 2rem;
-            text-align: center;
-        }
-
-        footer h2 {
-            margin-bottom: 1.5rem;
-        }
-
-        footer a {
-            color: #7cc5ff;
-            text-decoration: none;
-        }
-
-        footer a:hover {
-            text-decoration: underline;
-        }
-
-        footer p {
-            margin: 0.5rem 0;
-        }
-
-        @media (max-width: 768px) {
-            .hero h1 {
-                font-size: 2rem;
-            }
-            
-            .hero h2 {
-                font-size: 1.5rem;
-            }
-
-            .project-grid {
-                grid-template-columns: 1fr;
-            }
-        }
-    </style>
-</head>
-<body>
-    <header class="hero">
-        <h1>Priscilla Nzula|Data Scientist</h1>
-        
-        <p>A Data Scientist with a passion for uncovering insights, I specialize in transforming complex datasets into actionable strategies that drive measurable business impact. Leveraging advanced machine learning, statistical analysis, and exploratory data techniques, I’ve developed predictive models achieving over 85% accuracy in real estate valuation and 90% in customer churn prediction. As a data analyst, I’ve also identified key trends, segmented customer behaviors, and created interactive dashboards for real-time decision support, helping optimize revenue streams and reduce costs. By bridging data science with business intelligence, I deliver scalable, data-driven solutions that enhance customer retention, streamline operations, and empower data-informed decision-making.</p>
-    </header>
-
-    <section class="projects">
-        <h2>Featured Projects</h2>
-        <div class="project-grid">
-            <div class="project-card">
-                <h3>Pro Realty Real Estate Analysis</h3>
-                <p>Developed a comprehensive machine learning model to predict house prices in King County, enabling data-driven investment decisions and ROI optimization. The model analyzes multiple features to provide accurate price predictions and market insights.</p>
-                <h4>Technologies Used:</h4>
-                <ul>
-                    <li>Python (Pandas, NumPy, Scikit-learn)</li>
-                    <li>Jupyter Notebooks</li>
-                    <li>Statistical Analysis</li>
-                    <li>Machine Learning (Linear Regression)</li>
-                    <li>Data Visualization (Matplotlib, Seaborn)</li>
-                    <li>Git & GitHub</li>
-                </ul>
-                <h4>Key Achievements:</h4>
-                <ul>
-                    <li>85% accuracy in price prediction</li>
-                    <li>Feature importance analysis</li>
+No wrap
+Editing index.html file contents
+Selection deleted
+182
+183
+184
+185
+186
+187
+188
+189
+190
+191
+192
+193
+194
+195
+196
+197
+198
+199
+200
+201
+202
+203
+204
+205
+206
+207
+208
+209
+210
+211
+212
+213
+214
+215
+216
+217
+218
+219
+220
+221
+222
+223
+224
+225
+226
+227
+228
+229
+230
+231
                 </ul>
                 <a href="https://github.com/priscillanzula/pro_realty.git">View Project →</a>
             </div>
@@ -204,7 +117,7 @@
     </section>
 
     <section class="business-analysis">
-        <h2>Business Analysis (Case Study: Kwanza Tukule)</h2>
+        <h2>Case Study: Kwanza Tukule</h2>
         <div class="container">
             <p>Conducted a data-driven business analysis in collaboration with Kwanza Tukule to enhance sales performance, customer retention, and operational efficiency.</p>
             <ul>
@@ -228,3 +141,6 @@
     </footer>
 </body>
 </html>
+
+Use Control + Shift + m to toggle the tab key moving focus. Alternatively, use esc then tab to move to the next interactive element on the page.
+Editing priscilla_nzula.github.io/index.html at nzula_p · priscillanzula/priscilla_nzula.github.io 
