--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
             <h1>Priscilla Nzula | Data Scientist</h1>
             <p>A Data Scientist with a passion for uncovering insights, I specialize in transforming complex datasets into actionable strategies...</p>
         </div>
-        <img src="C:/Users/priscillah/OneDrive/Pictures/NDSCF3967.jpg" alt="Priscilla Nzula">
+        <img src="https://raw.githubusercontent.com/username/repo/main/NDSCF3967.jpg" alt="Priscilla Nzula">
+
     </header>
 
     <section class="projects">
