--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </header>
 
     <section class="projects">
-        <h2>Featured Projects</h2>
+        <h2>Projects & Case Study</h2>
         <div class="project-grid">
             <div class="project-card">
                 <h3>Pro Realty Real Estate Analysis</h3>
